@@ -66,23 +66,18 @@ def _is_trailing_comma(tokens: List[tokenize.TokenInfo], index: int) -> bool:
     if token.exact_type != tokenize.COMMA:
         return False
     # Must have remaining tokens on the same line such as NEWLINE
-    left_tokens = itertools.islice(tokens, index + 1, None)
+    left_tokens = list(itertools.islice(tokens, index + 1, None))
 
-    def same_start_token(
-        other_token: tokenize.TokenInfo, _token: tokenize.TokenInfo = token
-    ) -> bool:
-        return other_token.start[0] == _token.start[0]
+    more_tokens_on_line = False
+    for remaining_token in left_tokens:
+        if remaining_token.start[0] == token.start[0]:
+            more_tokens_on_line = True
+            # If one of the remaining same line tokens is not NEWLINE or COMMENT
+            # the comma is not trailing.
+            if remaining_token.type not in (tokenize.NEWLINE, tokenize.COMMENT):
+                return False
 
-    same_line_remaining_tokens = list(
-        itertools.takewhile(same_start_token, left_tokens)
-    )
-    # Note: If the newline is tokenize.NEWLINE and not tokenize.NL
-    # then the newline denotes the end of expression
-    is_last_element = all(
-        other_token.type in (tokenize.NEWLINE, tokenize.COMMENT)
-        for other_token in same_line_remaining_tokens
-    )
-    if not same_line_remaining_tokens or not is_last_element:
+    if not more_tokens_on_line:
         return False
 
     def get_curline_index_start():
